argocd/platform/core/hubble/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: hubble-https
  hostnames:
    - hubble.lab.zerodi.ru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
